--- a/ionic/elektron/ionic.config.json
+++ b/ionic/elektron/ionic.config.json
@@ -1,4 +1,8 @@
 {
   "name": "elektron",
-  "app_id": "6617b2be"
+  "app_id": "6617b2be",
+  "type": "ionic1",
+  "watchPatterns": [
+    "scss/**/*"
+  ]
 }
