--- a/ionic/elektron/bower.json
+++ b/ionic/elektron/bower.json
@@ -3,5 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.0"
+  },
+  "dependencies": {
+    "ion-datetime-picker": "^0.5.2"
   }
 }
