--- a/ionic/elektron/package.json
+++ b/ionic/elektron/package.json
@@ -11,10 +11,11 @@
     "gulp-sass": "^1.3.3"
   },
   "devDependencies": {
-    "@ionic/cli-plugin-gulp": "1.0.2",
-    "@ionic/cli-plugin-ionic1": "2.0.1",
+    "@ionic/cli-plugin-gulp": "1.1.1",
+    "@ionic/cli-plugin-ionic1": "2.1.1",
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "ionic": "3.7.0",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
