--- a/ionic/elektron/package.json
+++ b/ionic/elektron/package.json
@@ -11,6 +11,7 @@
     "gulp-sass": "^1.3.3"
   },
   "devDependencies": {
+    "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-gulp": "1.1.1",
     "@ionic/cli-plugin-ionic1": "2.1.1",
     "bower": "^1.3.3",
