--- a/ionic/elektron/bower.json
+++ b/ionic/elektron/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.1.0"
   },
   "dependencies": {
-    "ion-datetime-picker": "^0.5.2"
+    "ion-datetime-picker": "^0.5.2",
+    "ionic-toast": "^0.4.1"
   }
 }
