--- a/ionic/elektron/package.json
+++ b/ionic/elektron/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "ost-login-kit-v1.0",
-  "version": "1.0.0",
-  "description": "ost-login-kit-v1.0: An Ionic project",
-  "dependencies": {
-    "angular-chart.js": "^1.1.1",
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3"
-  },
-  "devDependencies": {
-    "@ionic/cli-plugin-cordova": "1.6.2",
-    "@ionic/cli-plugin-gulp": "1.1.1",
-    "@ionic/cli-plugin-ionic1": "2.1.1",
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "ionic": "3.7.0",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "com.ionic.keyboard"
-  ],
-  "cordovaPlatforms": []
+    "name": "ost-login-kit-v1.0",
+    "version": "1.0.0",
+    "description": "ost-login-kit-v1.0: An Ionic project",
+    "dependencies": {
+        "angular-chart.js": "^1.1.1",
+        "cordova-plugin-x-toast": "git+https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
+        "gulp": "^3.5.6",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^1.3.3"
+    },
+    "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-gulp": "1.1.1",
+        "@ionic/cli-plugin-ionic1": "2.1.1",
+        "bower": "^1.3.3",
+        "gulp-util": "^2.2.14",
+        "ionic": "3.7.0",
+        "shelljs": "^0.3.0"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-splashscreen",
+        "com.ionic.keyboard"
+    ],
+    "cordovaPlatforms": [],
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-x-toast": {}
+        }
+    }
 }
