--- a/ionic-mobile/elektron/ionic.config.json
+++ b/ionic-mobile/elektron/ionic.config.json
@@ -3,7 +3,10 @@
   "app_id": "6617b2be",
   "type": "ionic1",
   "watchPatterns": [
-    "scss/**/*"
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
   ],
   "integrations": {
     "cordova": {}
