--- a/ionic-mobile/elektron/package.json
+++ b/ionic-mobile/elektron/package.json
@@ -9,7 +9,8 @@
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3"
+    "gulp-sass": "^1.3.3",
+    "cordova-android": "~7.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -28,6 +29,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-x-toast": {}
-    }
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
