--- a/ionic-mobile/elektron/www/manifest.json
+++ b/ionic-mobile/elektron/www/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My Ionic App",
-  "short_name": "My Ionic App",
+  "name": "Elektron",
+  "short_name": "Elektron",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
