--- a/ionic-mobile/elektron/package.json
+++ b/ionic-mobile/elektron/package.json
@@ -30,8 +30,6 @@
     "plugins": {
       "cordova-plugin-x-toast": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
