--- a/ionic-mobile/elektron/package.json
+++ b/ionic-mobile/elektron/package.json
@@ -4,13 +4,14 @@
   "description": "Elektron-v1.0: Sensado de consumo eléctico",
   "dependencies": {
     "angular-chart.js": "^1.1.1",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "git+https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3",
-    "cordova-android": "~7.0.0"
+    "gulp-sass": "^1.3.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -28,8 +29,11 @@
   "cordovaPlatforms": [],
   "cordova": {
     "plugins": {
-      "cordova-plugin-x-toast": {}
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-whitelist": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
